// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly 1`] = `
<DocumentFragment>
  Native
</DocumentFragment>
`;

exports[`App renders correctly 2`] = `
<DocumentFragment>
  ReduxThunk
</DocumentFragment>
`;

exports[`App renders correctly 3`] = `
<DocumentFragment>
  ReduxSaga
</DocumentFragment>
`;

exports[`App renders correctly 4`] = `
<DocumentFragment>
  ReduxEffects
</DocumentFragment>
`;
